TestSuite/errors/err0034.pas
type IInt = interface
a : integer;
end;

begin
end.